# cmake_discord_game_sdk

./: CMakeLists.txt  README.md  conanfile.py
tests/: main.cpp  test_version_defs.h
